Fix player auto-complete theme and alignment on player page
Fixes #185
Fixes #184

--- a/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
+++ b/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
@@ -19,4 +19,10 @@
 .PlayerAutocomplete {
     z-index: z.player-autocomplete;
     // here
+
+    .react-autosuggest__suggestions-container {
+        themed background-color background-color;
+        themed color text-color;
+        text-align: left;
+    }
 }
